--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         <h3>On-Demand & Scheduled Services</h3>
         <p>Pick-up or delivery when you need it.</p>
       </div>
+       <div class="service-card">
+        <h3>Airport or Tour Transportation Services</h3>
+        <p>Reliable and Punctual Service</p>
+      </div>
     </div>
   </section>
 
@@ -115,8 +119,6 @@
       <li>On-time and dependable service</li>
       <li>Customer-first approach</li>
       <li>Safe and secure transport solutions</li>
-      <li>Airport or Tour Transportation Services</li>
-      <li>Reliable and Punctual Service</li>
     </ul>
   </section>
 
