--- a/index.html
+++ b/index.html
@@ -3,86 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Centurion Transportation</title>
-  <style>
-    body {
-      font-family: Menlo, monospace; /* Updated font */
-      margin: 0;
-      color: #1f2937; /* Dark gray text for readability */
-      background-color: #ffffff; /* White background */
-    }
-    header {
-      background-color: #0f172a; /* Navy header */
-      color: #ffffff; /* White text */
-      padding: 80px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-    }
-    header p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    section {
-      padding: 60px 20px;
-      text-align: center;
-    }
-    .services {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 40px;
-      margin-top: 40px;
-    }
-    .service-card {
-      width: 250px;
-      border: 1px solid #e2e8f0; /* Light gray border */
-      border-radius: 8px;
-      padding: 20px;
-      background-color: #f8f9fa; /* Light gray card background */
-      transition: transform 0.3s, box-shadow 0.3s; /* Optional hover effect */
-    }
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    }
-    .why-choose {
-      background-color: #f1f5f9; /* Light gray section */
-    }
-    .why-choose ul {
-      list-style: none;
-      padding: 0;
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: 1.1rem;
-    }
-    .why-choose li::before {
-      content: "✔ ";
-      color: #0f172a; /* Navy checkmark */
-    }
-    .contact a {
-      color: #0f172a; /* Navy link */
-      text-decoration: underline;
-    }
-    .contact button {
-      margin-top: 20px;
-      padding: 12px 30px;
-      font-size: 1rem;
-      background-color: #0f172a; /* Navy button */
-      color: #ffffff; /* White text */
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    footer {
-      background-color: #0f172a; /* Navy footer */
-      color: #ffffff; /* White text */
-      padding: 40px 20px;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -104,9 +25,9 @@
         <h3>On-Demand & Scheduled Services</h3>
         <p>Pick-up or delivery when you need it.</p>
       </div>
-       <div class="service-card">
+      <div class="service-card">
         <h3>Airport or Tour Transportation Services</h3>
-        <p>Reliable and Punctual Service</p>
+        <p>Reliable and punctual service</p>
       </div>
     </div>
   </section>
@@ -115,8 +36,8 @@
   <section class="why-choose">
     <h2>Why Choose Centurion Transportation</h2>
     <ul>
-      <li>Professional and Experienced Chauffeur</li>
-      <li>On-time and dependable service</li>
+      <li>Professional and experienced chauffeur</li>
+      <li>Punctual and reliable service</li>
       <li>Customer-first approach</li>
       <li>Safe and secure transport solutions</li>
     </ul>
@@ -127,7 +48,7 @@
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
     <p>Phone: (XXX) XXX-XXXX</p>
-    <button>Request a Quote</button>
+    <button id="quoteButton">Request a Quote</button>
   </section>
 
   <!-- Footer -->
@@ -135,5 +56,7 @@
     &copy; 2025 Centurion Transportation. All rights reserved.
   </footer>
 
+  <!-- Link to JS -->
+  <script src="script.js"></script>
 </body>
 </html>
