--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
-    <p>Phone: (XXX) XXX-XXXX</p>
-    <button id="quoteButton">Request a Quote</button>
-  </section>
+<section class="contact">
+  <h2>Contact Us</h2>
+  <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
+  <p>Phone: (XXX) XXX-XXXX</p>
+
+  <!-- Contact Form -->
+  <form id="quoteForm">
+    <input type="text" id="name" placeholder="Your Name" required><br><br>
+    <input type="email" id="email" placeholder="Your Email" required><br><br>
+    <input type="tel" id="phone" placeholder="Your Phone Number" required><br><br>
+    <button type="submit" id="quoteButton">Request a Quote</button>
+  </form>
+</section>
 
   <!-- Footer -->
   <footer>
