--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with Logo -->
   <header>
+    <img src="spartan-helmet.png" alt="Centurion Transportation Logo" class="logo">
     <h1>Centurion Transportation</h1>
     <p>Reliable, safe, and on-time transportation solutions for your business and personal needs.</p>
   </header>
@@ -44,26 +45,27 @@
   </section>
 
   <!-- Contact Section -->
-<section class="contact">
-  <h2>Contact Us</h2>
-  <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
-  <p>Phone: (XXX) XXX-XXXX</p>
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
+    <p>Phone: (XXX) XXX-XXXX</p>
 
-  <!-- Contact Form -->
-  <form id="quoteForm">
-    <input type="text" id="name" placeholder="Your Name" required><br><br>
-    <input type="email" id="email" placeholder="Your Email" required><br><br>
-    <input type="tel" id="phone" placeholder="Your Phone Number" required><br><br>
-    <button type="submit" id="quoteButton">Request a Quote</button>
-  </form>
-</section>
+    <!-- Contact Form -->
+    <form id="quoteForm">
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="email" id="email" placeholder="Your Email" required>
+      <input type="tel" id="phone" placeholder="Your Phone Number" required>
+      <button type="submit" id="quoteButton">Request a Quote</button>
+    </form>
+  </section>
 
   <!-- Footer -->
   <footer>
     &copy; 2025 Centurion Transportation. All rights reserved.
   </footer>
 
-  <!-- Link to JS -->
+  <!-- JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
