--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
 
-  <!-- Hero Section with Logo -->
+  <!-- Header Section -->
   <header>
-    <img src="spartan-helmet.png" alt="Centurion Transportation Logo" class="logo">
-    <h1>Centurion Transportation</h1>
-    <p>Reliable, safe, and on-time transportation solutions for your business and personal needs.</p>
+    <div class="header-container">
+      <img src="spartan-helmet.png" alt="Centurion Transportation Logo" class="logo">
+      <div class="header-text">
+        <h1>Centurion Transportation</h1>
+        <p>Reliable, safe, and on-time transportation solutions for your business and personal needs.</p>
+      </div>
+    </div>
   </header>
 
   <!-- Services Section -->
@@ -64,8 +68,8 @@
     &copy; 2025 Centurion Transportation. All rights reserved.
   </footer>
 
-  <!-- JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
 
