--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 </head>
 <body>
 
-  <!-- Header Section -->
+  <!-- Hero Section -->
   <header>
-    <div class="header-text">
-      <h1>Centurion Transportation</h1>
-      <p>Reliable, safe, and on-time transportation solutions for your business and personal needs.</p>
-    </div>
+    <h1>Centurion Transportation</h1>
+    <p>Reliable, safe, and on-time transportation solutions for your business and personal needs.</p>
   </header>
 
   <!-- Services Section -->
@@ -50,14 +48,7 @@
     <h2>Contact Us</h2>
     <p>Email: <a href="mailto:transportationcenturion@gmail.com">transportationcenturion@gmail.com</a></p>
     <p>Phone: (XXX) XXX-XXXX</p>
-
-    <!-- Contact Form -->
-    <form id="quoteForm">
-      <input type="text" id="name" placeholder="Your Name" required>
-      <input type="email" id="email" placeholder="Your Email" required>
-      <input type="tel" id="phone" placeholder="Your Phone Number" required>
-      <button type="submit" id="quoteButton">Request a Quote</button>
-    </form>
+    <button id="quoteButton">Request a Quote</button>
   </section>
 
   <!-- Footer -->
@@ -65,8 +56,10 @@
     &copy; 2025 Centurion Transportation. All rights reserved.
   </footer>
 
+  <!-- Link to JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
